--- a/flashcard-app/package.json
+++ b/flashcard-app/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^2.2.2",
     "@heroicons/react": "^2.2.0",
     "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-slot": "^1.2.2",
     "@radix-ui/react-switch": "^1.2.4",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
@@ -22,6 +23,7 @@
     "lucide-react": "^0.509.0",
     "next": "15.3.1",
     "next-pwa": "^5.6.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.2.0"
