アプリ名を「忘却曲線単語帳」から「コツコツ単語帳」に変更し、関連するメタデータや表示文言も更新しました。また、ゲストユーザーの機能制限に関する警告を追加し、ログインページや単語帳詳細ページのUIを改善しました。

--- a/flashcard-app/public/manifest.json
+++ b/flashcard-app/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "忘却曲線単語帳",
+  "name": "コツコツ単語帳",
   "short_name": "単語帳",
   "description": "効率的な単語学習をサポートするPWAアプリ",
   "start_url": "/",
