--- a/flashcard-app/package.json
+++ b/flashcard-app/package.json
@@ -27,6 +27,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-swipeable": "^7.0.2",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
