manifest.jsonの短縮名を変更し、使い方ガイドページのタイトルや説明文を修正しました。また、ログインページのメッセージを削除し、内容を整理しました。これにより、ユーザーの理解を深め、アプリの使いやすさを向上させました。

--- a/flashcard-app/public/manifest.json
+++ b/flashcard-app/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "コツコツ単語帳",
-  "short_name": "単語帳",
+  "short_name": "52",
   "description": "効率的な単語学習をサポートするPWAアプリ",
   "start_url": "/",
   "display": "standalone",
